fix wrong size of toolbar buttons in Options on Linux

--- a/chrome/skin/classic/tabscope/overlay.css
+++ b/chrome/skin/classic/tabscope/overlay.css
@@ -108,8 +108,16 @@
 
 /* ::::: options ::::: */
 
-groupbox[_uigroup] > caption[disabled="true"] .caption-text {
-	color: GrayText;
+@-moz-document url("chrome://tabscope/content/prefs.xul") {
+
+	groupbox[_uigroup] > caption[disabled="true"] .caption-text {
+		color: GrayText;
+	}
+
+	toolbarbutton[type="checkbox"][checked="true"] {
+		padding: 2px !important;
+	}
+
 }
 
 /* ::::: Windows (except Classic and third-party themes) ::::: */
